[metadata]
name = db-testtools
url = https://github.com/juledwar/db-testtools
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache2.0
python_requires = >=3.7
maintainer = Julian Edwards
maintainer_email = juledwar@cisco.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[files]
packages = dbtesttools
exclude =
    dbtesttools.testing
    dbtesttools.tests

[bdist_wheel]
universal = 1

[pbr]
skip_git_sdist = 1
